feat: add a ping command
just returns a pong stating that the service is active
